# french-intent-classifier

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-serving.txt
.github/workflows/: ci.yml
notebooks/: colab.md
src/intent_classifier/common/: config.py
src/intent_classifier/data/: load.py
src/intent_classifier/evaluation/: compare.py
src/intent_classifier/modeling/: baseline.py  transformer.py
src/intent_classifier/optimization/: onnx_export.py
src/intent_classifier/serving/: api.py
tests/: test_api.py  test_baseline.py  test_config.py  test_data.py  test_evaluate.py  test_optimization.py  test_transformer.py
