[project]
name = "french-intent-classifier"
version = "0.1.0"
description = "Classification d'intentions en français — fine-tuning CamemBERT industrialisé (MASSIVE fr-FR) : baseline honnête, MLflow, ONNX, API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Étape 1 : socle ---
    "pydantic-settings>=2.3",  # configuration typée via .env
    "structlog>=24.1",         # logs structurés
    # --- Étape 2 : données ---
    "datasets>=3.0",           # téléchargement reproductible (HF) de MASSIVE fr-FR
    "pandas>=2.2",             # manipulation tabulaire
    "pyarrow>=16.0",           # parquet
    "matplotlib>=3.8",         # graphique de distribution des intentions
    # --- Étape 3 : baseline ---
    "scikit-learn>=1.5",       # TF-IDF + régression logistique
    "mlflow>=2.14",            # suivi d'expériences (baseline ET transformer)
    # --- Étape 4 : fine-tuning ---
    "torch>=2.4",              # backend (CUDA sur Colab T4, MPS sur Mac, CPU sinon)
    "transformers>=4.48",      # CamemBERT + Trainer
    "accelerate>=1.0",         # requis par Trainer
]

[project.scripts]
intents-data = "intent_classifier.data.load:main"
intents-train-baseline = "intent_classifier.modeling.baseline:main"
intents-train-transformer = "intent_classifier.modeling.transformer:main"
intents-evaluate = "intent_classifier.evaluation.compare:main"

[dependency-groups]
dev = [
    "ruff>=0.9",     # linter + formatter
    "pytest>=8.2",   # tests
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

# Le projet s'appelle french-intent-classifier, le paquet Python intent_classifier.
[tool.uv.build-backend]
module-name = "intent_classifier"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
